feat: add 3 methods in product service + 2 custom exceptions